[dependencies]
arrayvec = { default-features = false, version = '0.5' }
num-traits = { default-features = false, version = '0.2' }
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.0' }
serde = { default-features = false, features = ['derive'], optional = true, version = '1.0' }
sp-arithmetic = { default-features = false, version = '2.0' }

[features]
default = []
std = [
    'arrayvec/std',
    'num-traits/std',
    'parity-scale-codec/std',
    'serde',
    'sp-arithmetic/std',
]

[package]
authors = ['The Valiu team']
description = 'Valiu node commons'
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'valiu-node-commons'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
