[dependencies]
arrayvec = { default-features = false, version = '0.5' }
frame-executive = { default-features = false, version = '2.0' }
frame-system = { default-features = false, version = '2.0' }
num-traits = { default-features = false, version = '0.2' }
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.0' }
serde = { default-features = false, features = ['derive'], optional = true, version = '1.0' }
sp-arithmetic = { default-features = false, version = '2.0' }
sp-core = { default-features = false, version = '2.0' }
sp-runtime = { default-features = false, version = '2.0' }

[features]
default = []
std = [
    'arrayvec/std',
    'frame-executive/std',
    'frame-system/std',
    'num-traits/std',
    'parity-scale-codec/std',
    'serde',
    'sp-arithmetic/std',
    'sp-core/std',
    'sp-runtime/std',
]

[package]
authors = ['The Valiu team']
categories = ['configuration']
description = 'Valiu node - Commons'
edition = '2018'
keywords = ['blockchain', 'valiu']
license = 'Unlicense'
name = 'valiu-node-commons'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'

