[package]
name = "virto-xcm-emulator"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
proc-macro2 = "1.0.40"
xcm-emulator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
thousands = "0.2.0"

# Substrate
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-assets = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-asset-registry = { path = "../pallets/asset-registry" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
parachains-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }

# Runtimes
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
kreivo-runtime = { path = "../runtime/kreivo" }
statemine-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
