[dependencies]
parity-scale-codec = { default-features = false, features = ['derive', 'std'], version = '1.0' }
sp-runtime = { default-features = false, features = ["std"], version = '2.0' }
substrate-subxt = { default-features = false, version = '0.13' }
vln-commons = { default-features = false, features = ['std'], path = '../vln-commons' }

[dev-dependencies]
env_logger = { default-features = false, version = '0.7' }
sp-core = { default-features = false, features = ['std'], version = '2.0' }
sp-keyring = { default-features = false, version = '2.0' }
tokio = { default-features = false, features = ["macros", "rt-core"], version = '0.2' }

[features]
default = []
_integration-tests = []

[package]
authors = ['The Valiu Liquidity Network team']
categories = ['configuration']
description = 'Valiu Liquidity Network - Remote procedure calls'
edition = '2018'
keywords = ['blockchain', 'valiu']
license = 'Unlicense'
name = 'vln-rpc'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'
