[package]
authors = ['Daniel Olano <daniel@olanod.com>']
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'vln-runtime'
repository = 'https://github.com/valibre-org/node'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder-runner = { default-features = false, version = '2.0' }

[dependencies]
frame-benchmarking = { default-features = false, optional = true, version = '2.0' }
frame-executive = { default-features = false, version = '2.0' }
frame-support = { default-features = false, version = '2.0' }
frame-system = { default-features = false, version = '2.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '2.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '2.0' }
hex-literal = { default-features = false, optional = true, version = '0.3' }
orml-tokens = { default-features = false, version = '0.3' }
pallet-aura = { default-features = false, version = '2.0' }
pallet-grandpa = { default-features = false, version = '2.0' }
pallet-liquidity-provider = { default-features = false, path = '../vln-pallets/liquidity-provider' }
pallet-membership = { default-features = false, version = '2.0' }
pallet-randomness-collective-flip = { default-features = false, version = '2.0' }
pallet-sudo = { default-features = false, version = '2.0' }
pallet-timestamp = { default-features = false, version = '2.0' }
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3' }
serde = { default-features = false, features = ['derive'], optional = true, version = '1.0' }
sp-api = { default-features = false, version = '2.0' }
sp-block-builder = { default-features = false, version = '2.0' }
sp-consensus-aura = { default-features = false, version = '0.8' }
sp-core = { default-features = false, version = '2.0' }
sp-inherents = { default-features = false, version = '2.0' }
sp-offchain = { default-features = false, version = '2.0' }
sp-runtime = { default-features = false, version = '2.0' }
sp-session = { default-features = false, version = '2.0' }
sp-transaction-pool = { default-features = false, version = '2.0' }
sp-version = { default-features = false, version = '2.0' }
vln-commons = { default-features = false, path = '../vln-commons' }

[features]
default = ['std']
native-runtime-benchmarks = [
    'pallet-liquidity-provider/native-runtime-benchmarks',
    'runtime-benchmarks',
    'std',
]
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-liquidity-provider/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'orml-tokens/std',
    'pallet-aura/std',
    'pallet-grandpa/std',
    'pallet-liquidity-provider/std',
    'pallet-membership/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'parity-scale-codec/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'vln-commons/std',
]
