[package]
authors = ['Daniel Olano <daniel@olanod.com>']
build = 'build.rs'
description = 'Valiu Liquidity Network - Parachain'
edition = '2018'
homepage = 'https://github.com/valibre-org/node'
license = 'Unlicense'
name = 'vln-parachain'
repository = 'https://github.com/valibre-org/node'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.13"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.3"
serde = { version = "1.0.119", features = ["derive"] }
hex-literal = "0.2.1"

# Parachain dependencies
vln-runtime = { package = "vln-runtime", path = '../../runtime/', version = '2.0.0' }

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.2" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
# RPC related dependencies
jsonrpc-core = "15.1.0"

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.2" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2"}
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2"}
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.2"}

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tempfile = "3.2.0"
tokio = { version = "0.2.13", features = ["macros"] }

[features]
default = []
runtime-benchmarks = [
    'vln-runtime/runtime-benchmarks'
]

[[bin]]
name = 'vln_parachain'
path = 'src/main.rs'
